# Manga-Scraper

./: .gitignore  README.md  pyproject.toml
data/: analysis.ipynb
mvp/: mvp.ipynb
src/: entrypoint.py
src/core/: agents.py  contracts.py  requester.py  settings.py  utils.py
src/core/tools/: mongodb.py  s3.py
src/extraction/: spider.py  static.py  utils.py
src/extraction/data/: analysis.ipynb
src/extraction/parsers/: utils.py
