[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Gustavo-B-Morales-S <protected_gustavo_borges@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
selectolax = "^0.3.25"
httpx = "^0.27.2"
pydantic-settings = "^2.6.1"
pydantic = "^2.9.2"
trio = "^0.27.0"
loguru = "^0.7.2"
tenacity = "^9.0.0"
ua-parser = "^0.18.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.0"
ruff = "^0.7.3"
ipykernel = "^6.29.5"

[tool.ruff]
line-length = 85

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check . ; ruff format . --diff'
format = 'ruff check . --fix ; ruff format .'
del_cache = 'find . | grep -E "(/__pycache__$|\.pyc$|\.pyo$|.mypy|.ruff)" | xargs rm -rf'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
